Intermittent Assertion failure: mChannelChild (no channel child in RecvOnStatus), at /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpBackgroundChannelChild.cpp:160
Categories
(Core :: Networking, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: CuveeHsu)
References
(Regression)
Details
(Keywords: assertion, intermittent-failure, regression)
Attachments
(1 file)
Filed by: rmaries [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=307348114&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/NBoSkDs6QqOcDBa4L_8yXw/runs/0/artifacts/public/logs/live_backing.log
[task 2020-06-24T10:11:01.102Z] 10:11:01 INFO - TEST-OK | layout/style/test/test_viewport_units.html | took 956ms
[task 2020-06-24T10:11:01.210Z] 10:11:01 INFO - TEST-START | layout/style/test/test_visited_image_loading.html
[task 2020-06-24T10:11:02.074Z] 10:11:02 INFO - GECKO(1251) | Assertion failure: mChannelChild (no channel child in RecvOnStatus), at /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpBackgroundChannelChild.cpp:160
[task 2020-06-24T10:11:02.097Z] 10:11:02 INFO - Initializing stack-fixing for the first stack frame, this may take a while...
[task 2020-06-24T10:11:15.210Z] 10:11:15 INFO - GECKO(1251) | #01: mozilla::net::PHttpBackgroundChannelChild::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:3953984822d3c73ca95ea4653e9babb21069d4330c03bda8b5df4908eb71df338eee6c6cc7030881508cb9b30c90e91dee35cb9ee5a3be6f8ac76c3a1eabc20a/ipc/ipdl/PHttpBackgroundChannelChild.cpp::353]
[task 2020-06-24T10:11:15.212Z] 10:11:15 INFO - GECKO(1251) | #02: mozilla::ipc::PBackgroundChild::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:41612fc6af9262efb2d2d677bd6da4a915910879d9ca4103b71804c259fe061b62ce78f8538e58a75ca5626d60856b2d96713376271ce1f7e345feaa016bba14/ipc/ipdl/PBackgroundChild.cpp::6080]
[task 2020-06-24T10:11:15.212Z] 10:11:15 INFO - GECKO(1251) | #03: mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) [ipc/glue/MessageChannel.cpp:2170]
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
most of the checks are not assertion in HttpChannelChild.
It could be possible that the ActorDestoryed is triggered during the HttpChannelChild serves data.
I would remove those assertions after taking more close look.
Comment 2•5 years ago
|
||
Set release status flags based on info from the regressing bug 1633935
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 4•5 years ago
|
||
Depends on D81275
Comment 6•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Comment 8•5 years ago
|
||
The patch landed in nightly and beta is affected.
:junior, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 9•5 years ago
|
||
The regressor is bug 1633935, which was backout-ed in 79
Description
•