Bug 1648035 - remove the false alarm assertion given mChild could be destroied by ActorDestory, r=mayhemer,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D81625